[package]
name = "dendron"
version = "0.1.0"
authors = ["YOSHIOKA Takuma <nop_thread@nops.red>"]
edition = "2021"
rust-version = "1.59"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Generic tree data structure"
repository = "https://gitlab.com/nop_thread/dendron"
keywords = ["tree"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]

std = []

[dependencies]

[badges]
maintenance = { status = "actively-developed" }
